<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advanced settings</string>
    <string name="category_dock_title">Dock</string>
    <string name="dockaudio_subcat_title">Dock Audio</string>
    <string name="use_dock_audio_title_head">Use Dock USB Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>
    <string name="category_haptic_title">Haptic</string>
    <string name="vibrator_subcat_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>
    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
    <string name="category_screen_title">Screen</string>
    <string name="mdnie_subcat_title">Colors</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>
    <string name="led_subcat_title">Notification LED</string>
    <string name="led_fade_title_head">LED Fading</string>
    <string name="led_fade_summary_head">Enable LED smooth fading instead of sharp blinking.</string>
    <string name="touchkey_subcat_title">Touchkeys</string>
    <string name="touchkey_light_title_head">Backlight</string>
    <string name="touchkey_light_summary_off">Enable backlight</string>
    <string name="touchkey_light_summary_on">Disable backlight</string>
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Set timeout for the backlight</string>
</resources>
