<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/mdnie_subcat_title">
        <com.cyanogenmod.settings.device.mDNIeScenario android:entries="@array/mdnie_scenario_entries" android:title="@string/mdnie_scenario_title_head" android:key="mdnie_scenario" android:summary="@string/mdnie_scenario_summary_head" android:defaultValue="0" android:entryValues="@array/mdnie_scenario_entries_values" />
        <com.cyanogenmod.settings.device.mDNIeMode android:entries="@array/mdnie_mode_entries" android:title="@string/mdnie_mode_title_head" android:key="mdnie_mode" android:summary="@string/mdnie_mode_summary_head" android:defaultValue="0" android:entryValues="@array/mdnie_mode_entries_values" />
        <com.cyanogenmod.settings.device.mDNIeNegative android:entries="@array/mdnie_negative_entries" android:title="@string/mdnie_negative_title_head" android:key="mdnie_negative" android:summary="@string/mdnie_negative_summary_head" android:defaultValue="0" android:entryValues="@array/mdnie_negative_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/led_subcat_title">
        <com.cyanogenmod.settings.device.LedFade android:entries="@array/led_fade_entries" android:title="@string/led_fade_title_head" android:key="led_fade" android:summary="@string/led_fade_summary_head" android:defaultValue="1" android:entryValues="@array/led_fade_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/touchkey_subcat_title">
        <CheckBoxPreference android:title="@string/touchkey_light_title_head" android:key="touchkey_light" android:defaultValue="true" android:summaryOn="@string/touchkey_light_summary_on" android:summaryOff="@string/touchkey_light_summary_off" />
        <com.cyanogenmod.settings.device.TouchkeyTimeout android:entries="@array/touchkey_timeout_entries" android:title="@string/touchkey_timeout_title_head" android:key="touchkey_timeout" android:summary="@string/touchkey_timeout_summary_head" android:defaultValue="3" android:entryValues="@array/touchkey_timeout_entries_values" />
    </PreferenceCategory>
</PreferenceScreen>